# libvmod-utf8

./: .gitmodules  .travis.yml  CHANGES.md  README.md  configure.ac
src/: Makefile.am  vmod.vcc  vmod_utf8.c  vmod_utf8.vcc
src/tests/: b00000.vtc  b00001.vtc  b00002.vtc
